# projects

./: .gitignore
project1/: pyproject.toml  scraper.ipynb  scraper.py  temp.bash
